# SOIM

./: .env  Book1.xlsx  CHANGELOG.md  README.md  SOIM_simulation.py  SOIM_starter.py  log_time_README.txt  logtime.txt  my_project.rar  pippo.txt  profile.txt  project_list.yml  pyproject.toml  requirements.txt  tester.py  tester2.py
SOIM/: 05_APH1_VIHI_1306_1607_tstep10_MPO_SIMBIO-SYS_VIHI_FPA_v9.xlsx  SIOM_notes.docx  __main__.py  core.py  products_todo.xlsx
SOIM/lib/: Verify_DarkSide.py  classes.py  console.py
SOIM/old_versions/: BC-SIM-TC-XXX_-_SOIM_RP.docx  BC-SIM-TC-XXX_-_SOIM_original.docx
doc/: OAPD-TN-SOIM-User-Manual_v6.docx  Product definitions_LOCAL.xlsx  Product definitions_LOCAL_v2.xlsx  products_todo.csv
lib/: IO_functions.py  classes.py  console.py  simulator.py  utility.py
mk/: aareadme.txt  bc_ops.tm  bc_ops_v310_20220928_002.tm  bc_plan.tm  bc_plan_v310_20220928_001.tm
my_project/: instruments_Dic.yml  instruments_qqqqq.txt  paths_Dic.yml  paths_yyyyy.txt  paths_yyyyy.yml  products ciao.csv  products ciao.txt  products ciao.yml  products.csv  scenario_Dic.yml  scenario_xxxx.txt  scenario_xxxx.yml  scenario_xxxx2.yml  timeline_Dic.txt  timeline_zzzz.txt
my_project/logs/: log_20221205-092332.txt  log_20221205-092429.txt  log_20221205-092931.txt  log_20221205-092950.txt  log_20221205-093843.txt  log_20221205-095615.txt  log_20221205-100010.txt  log_20221205-100108.txt  log_20221205-100333.txt  log_20221205-100641.txt  log_20221205-102602.txt  log_20221205-103344.txt  log_20221205-103422.txt  (+40 more)
projects/: project_list.yml  target_021_398.rar
(+32 files in other folders)
